Pankaj | Fix - Removed dobule scrollbar from all details pages (TB)

--- a/ui/app/styles/bahmni-helper/_base.scss
+++ b/ui/app/styles/bahmni-helper/_base.scss
@@ -6,8 +6,8 @@ body {
   font-size: 16px;
   line-height: 1.1em;
 }
-body.ngdialog-open {
-  overflow: auto !important;
+body.show-controller-back.ngdialog-open{
+ overflow: auto !important;
 }
 body pre {
   font-family: $OpenSansFont;
